# BookStore

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  env.dev  manage.py  pyproject.toml
.github/workflows/: build.yml  github-actions-demo.yml  workflow-pr.yml
BookStore/: settings.py  urls.py  views.py  wsgi.py
bookstore/: settings.py  urls.py  views.py
order/: admin.py  factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  tests.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewset/: __init__.py  category_viewset.py  product_viewset.py
